# cmcc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_INTEGRATION_GUIDE1.md  CLAUDE.md  DEPLOY_KYLIN.md  DEV_DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IFLOW.md  PROD_DEPLOY.md  README.md  SETUP_MINICONDA.md  SignCheckUtil.java  TESTING_RAG_DEVICES.md  Usage_Guide_CN.md  correct_streaming_webm_decoder.py  docker-compose.yml  environment.yml  equipments.txt  filter_media.py  funasr_realtime_mic.py  funasr_rt_mic.py  implementation_plan.md  main.py  model.py  process_devices.py  pyproject.toml  rag_llm_test_cases.json  rag_llm_test_cases_100.json  rag_performance_test_cases.json  real_time_speech_recognition_final.py  requirements.txt  simple_streaming_webm_decoder.py  streaming_webm_decoder.py  test_cases_small.json  test_correct_streaming.py  test_data_invalid.json  (+26 more)
.claude/: settings.local.json
certs/: api_ext.cnf  api_server.crt  api_server.csr  api_server.key  cmcc_ca.crt  cmcc_ca.key  cmcc_ca.srl  cmcc_server.crt  cmcc_server.csr  cmcc_server.key  gen_lan_cert.sh  lan_ext.cnf  lan_server.crt  lan_server.csr  lan_server.key  server_ext.cnf
chroma_db/: chroma.sqlite3
cmcc_assistant/: __init__.py  config.py  data_loader.py  llm_handler.py  rag_processor.py  speech_recognizer.py
config/: config.example.toml
data/: areas.csv  data.xlsx  devices.csv  doors.csv  media.csv  screens.csv  videos.csv
docs/: API_INTEGRATION_GUIDE.md  vad_processor.md
examples/: vad_example.py
frontend/: .env.development  .env.production  morph_icu.pem  (+7 more)
(+170 files in other folders)
