[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcc-assistant"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A real-time voice control center for CMCC's smart exhibition hall."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
